examples/envoy/proxy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  clusters:
    - name: ratelimit
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      protocol_selection: USE_CONFIGURED_PROTOCOL
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ratelimit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
    - name: mock
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9999
    - name: keycloak-iam
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: dev-signin.vngcloud.tech
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: dev-signin.vngcloud.tech
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                http_filters:
                  - name: envoy.filters.http.JwtAuthentication
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        # Each JWT authentication provider has a name to be used in routing rules.
                        keycloak-iam:
                          # The name of the entity that is providing the JWT.
                          #issuer: https://auth.funnel-labs.io/auth/realms/funnel
                          # Obtain a JSON Web Key Set from a remove server for JWT validation.
                          remote_jwks:
                            http_uri:
                              uri: https://dev-signin.vngcloud.tech/auth/realms/iam/protocol/openid-connect/certs
                              cluster: keycloak-iam
                              timeout: 2s
                            cache_duration:
                              seconds: 3600
                          # # # Extract the JWT base64 payload and include it in a header.
                          # forward_payload_header: x-jwt-payload
                          payload_in_metadata: keycloak-iam-payload
                          forward: true
                          jwt_cache_config:
                            jwt_cache_size: 1000
                          claim_to_headers:
                            - header_name: x-jwt-claim-auth-account-id
                              claim_name: authAccountId
                      rules:
                        - match:
                            prefix: /
                          requires:
                            requires_any:
                              requirements:
                                - provider_name: keycloak-iam
                                - allow_missing: {}
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: vinhph2.vngcloud.vn
                      request_type: external
                      stage: 0
                      rate_limited_as_resource_exhausted: true
                      failure_mode_deny: true
                      enable_x_ratelimit_headers: DRAFT_VERSION_03
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit
                        transport_api_version: V3
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: mock
                            rate_limits:
                              - actions:
                                  - generic_key:
                                      descriptor_key: "service"
                                      descriptor_value: "vinhph2"
                              - actions:
                                  - request_headers:
                                      header_name: ":method"
                                      descriptor_key: "method"
                                  - request_headers:
                                      header_name: "x-jwt-claim-auth-account-id"
                                      descriptor_key: "auth-account-id"
                              - actions:
                                  - request_headers:
                                      header_name: ":method"
                                      descriptor_key: "method"
                                  - remote_address: {}
                              - actions:
                                  - request_headers:
                                      header_name: ":method"
                                      descriptor_key: "method"
                                  - request_headers:
                                      header_name: ":path"
                                      descriptor_key: "path"
# layered_runtime:
#   layers:
#     - name: static_layer
#       static_layer:
#         envoy.deprecated_features:envoy.config.route.v3.RateLimit.Action.dynamic_metadata: true
